language/move-prover/tests/sources/functional/arithm.exp
Move prover returns: exiting with boogie verification errors
error: post-condition does not hold
    ┌─ tests/sources/functional/arithm.move:287:9
    │
287 │         ensures result == a*b*c + a*b*d + a*b;
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/arithm.move:283: distribution_law_incorrect
    =         a = <redacted>
    =         b = <redacted>
    =         c = <redacted>
    =         d = <redacted>
    =     at tests/sources/functional/arithm.move:284: distribution_law_incorrect
    =         result = <redacted>
    =     at tests/sources/functional/arithm.move:285: distribution_law_incorrect
    =     at tests/sources/functional/arithm.move:287

error: abort not covered by any of the `aborts_if` clauses
    ┌─ tests/sources/functional/arithm.move:128:5
    │
126 │           x / y
    │             - abort happened here with execution failure
127 │       }
128 │ ╭     spec div_by_zero_u64_incorrect {
129 │ │         aborts_if false;
130 │ │     }
    │ ╰─────^
    │
    =     at tests/sources/functional/arithm.move:125: div_by_zero_u64_incorrect
    =         x = <redacted>
    =         y = <redacted>
    =     at tests/sources/functional/arithm.move:126: div_by_zero_u64_incorrect
    =         ABORTED

error: post-condition does not hold
    ┌─ tests/sources/functional/arithm.move:273:9
    │
273 │         ensures result != 720;
    │         ^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/arithm.move:262: mul5_incorrect
    =         a = <redacted>
    =         b = <redacted>
    =         c = <redacted>
    =         d = <redacted>
    =         e = <redacted>
    =     at tests/sources/functional/arithm.move:264: mul5_incorrect
    =     at tests/sources/functional/arithm.move:265: mul5_incorrect
    =     at tests/sources/functional/arithm.move:266: mul5_incorrect
    =     at tests/sources/functional/arithm.move:267: mul5_incorrect
    =     at tests/sources/functional/arithm.move:269: mul5_incorrect
    =         result = <redacted>
    =     at tests/sources/functional/arithm.move:270: mul5_incorrect
    =     at tests/sources/functional/arithm.move:273

error: abort not covered by any of the `aborts_if` clauses
    ┌─ tests/sources/functional/arithm.move:180:5
    │
178 │           x + y
    │             - abort happened here with execution failure
179 │       }
180 │ ╭     spec overflow_u128_add_incorrect {
181 │ │         aborts_if false;
182 │ │     }
    │ ╰─────^
    │
    =     at tests/sources/functional/arithm.move:177: overflow_u128_add_incorrect
    =         x = <redacted>
    =         y = <redacted>
    =     at tests/sources/functional/arithm.move:178: overflow_u128_add_incorrect
    =         ABORTED

error: abort not covered by any of the `aborts_if` clauses
    ┌─ tests/sources/functional/arithm.move:232:5
    │
230 │           x * y
    │             - abort happened here with execution failure
231 │       }
232 │ ╭     spec overflow_u128_mul_incorrect {
233 │ │         aborts_if false;
234 │ │     }
    │ ╰─────^
    │
    =     at tests/sources/functional/arithm.move:229: overflow_u128_mul_incorrect
    =         x = <redacted>
    =         y = <redacted>
    =     at tests/sources/functional/arithm.move:230: overflow_u128_mul_incorrect
    =         ABORTED

error: abort not covered by any of the `aborts_if` clauses
    ┌─ tests/sources/functional/arithm.move:164:5
    │
162 │           x + y
    │             - abort happened here with execution failure
163 │       }
164 │ ╭     spec overflow_u64_add_incorrect {
165 │ │         aborts_if false;
166 │ │     }
    │ ╰─────^
    │
    =     at tests/sources/functional/arithm.move:161: overflow_u64_add_incorrect
    =         x = <redacted>
    =         y = <redacted>
    =     at tests/sources/functional/arithm.move:162: overflow_u64_add_incorrect
    =         ABORTED

error: abort not covered by any of the `aborts_if` clauses
    ┌─ tests/sources/functional/arithm.move:217:5
    │
215 │           x * y
    │             - abort happened here with execution failure
216 │       }
217 │ ╭     spec overflow_u64_mul_incorrect {
218 │ │         aborts_if false;
219 │ │     }
    │ ╰─────^
    │
    =     at tests/sources/functional/arithm.move:214: overflow_u64_mul_incorrect
    =         x = <redacted>
    =         y = <redacted>
    =     at tests/sources/functional/arithm.move:215: overflow_u64_mul_incorrect
    =         ABORTED

error: abort not covered by any of the `aborts_if` clauses
    ┌─ tests/sources/functional/arithm.move:148:5
    │
146 │           x + y
    │             - abort happened here with execution failure
147 │       }
148 │ ╭     spec overflow_u8_add_incorrect {
149 │ │         aborts_if false;
150 │ │     }
    │ ╰─────^
    │
    =     at tests/sources/functional/arithm.move:145: overflow_u8_add_incorrect
    =         x = <redacted>
    =         y = <redacted>
    =     at tests/sources/functional/arithm.move:146: overflow_u8_add_incorrect
    =         ABORTED

error: abort not covered by any of the `aborts_if` clauses
    ┌─ tests/sources/functional/arithm.move:201:5
    │
199 │           x * y
    │             - abort happened here with execution failure
200 │       }
201 │ ╭     spec overflow_u8_mul_incorrect {
202 │ │         aborts_if false;
203 │ │     }
    │ ╰─────^
    │
    =     at tests/sources/functional/arithm.move:198: overflow_u8_mul_incorrect
    =         x = <redacted>
    =         y = <redacted>
    =     at tests/sources/functional/arithm.move:199: overflow_u8_mul_incorrect
    =         ABORTED
